fix TOC z-index

--- a/static/styles/toc.scss
+++ b/static/styles/toc.scss
@@ -7,6 +7,7 @@
   color: #99979c;
   border-left: 1px solid #ddd;
   width: 12rem;
+  z-index: 1;
   
   a{
     padding: .125rem 3rem .125rem 1.5rem;
